--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 *,
-p {
+p,
+h1,
+h2 {
   margin: 0;
   padding: 0;
 }
@@ -12,34 +14,35 @@ html {
   color: #222;
   height: 100%;
   font-family: "Open Sans", sans-serif;
-  background: radial-gradient(
-    circle at 10% 20%,
-    rgba(91, 173, 254, 0.16) 0%,
-    rgba(91, 224, 254, 0.26) 47.2%,
-    rgba(170, 254, 235, 0.33) 90%
-  );
 }
 
 .container {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgba(91, 173, 254, 0.26) 0%,
+    rgba(91, 224, 254, 0.46) 47.2%,
+    rgba(230, 254, 235, 0.93) 90%
+  );
 }
 
 input {
   width: 30%;
-  height: 40px;
+  height: 25px;
   padding: 5px;
   margin: 0 20px 20px 0;
   border: 2px solid #07f;
   border-radius: 4px;
   background-color: #d7e5f3;
+  font-size: 16px;
 }
 input:hover,
 input:focus {
-  border: 3px solid #07f;
+  cursor: pointer;
+  background-color: #d2f0f0;
 }
 button {
   width: 160px;
@@ -48,22 +51,16 @@ button {
   border: 2px solid #07f;
   background-color: #d7e5f3;
   margin-right: 20px;
+  font-size: 16px;
 }
 button:hover,
 button:focus {
-  border: 3px solid #07f;
+  cursor: pointer;
+  background-color: #d2f0f0;
 }
-/* input[type="date"] ::-webkit-calendar-picker-indicator {
-  opacity: 0;
-} */
-.date-current {
-  display: block;
-  max-width: 18%;
-  border: 2px solid #ec0;
-}
-.date-current:hover,
-.date-current:focus {
-  border: 3px solid #ec0;
+
+.time {
+  margin-top: 15px;
 }
 
 main {
@@ -73,45 +70,42 @@ main {
 }
 
 .current-weather {
-  padding: 110px 150px;
+  padding: 115px 150px 130px;
   align-self: center;
+  text-align: center;
   margin: 30px 0px;
-  background: url(./img/img-1.png) 50%/400px 400px no-repeat;
-}
-h1 {
-  margin: 0;
-}
-.description {
-  text-transform: capitalize;
+  background: url(./img/img-1.png) 50%/430px 430px no-repeat;
 }
 
-.item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
 .temp {
-  padding: 40px;
-  width: 50%;
-  font-size: 1.2em;
-  border-radius: 50%;
-  border: 2px solid #ec0;
-  margin-bottom: 20px;
+  font-size: 34px;
+  line-height: 1.2;
+}
+h2 {
+  display: flex;
+  justify-content: center;
+}
+h2 a {
+  align-self: flex-start;
+  font-size: 22px;
+  color: #07f;
+}
+.active {
+  color: #222;
+  cursor: auto;
 }
 
-i {
-  font-size: 44px;
-  color: #ec0;
+h1 {
+  font-size: 36px;
+  line-height: 1.2;
 }
-.date {
-  border: 2px solid #ec0;
-  min-height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0 40px;
-  margin-top: 20px;
+
+p {
+  font-size: 18px;
+}
+
+.description::first-letter {
+  text-transform: capitalize;
 }
 
 .more-info {
@@ -119,11 +113,14 @@ i {
   padding: 5px;
   color: inherit;
   width: 30%;
-  height: 40px;
+  height: 25px;
   border: 2px solid #07f;
-  margin-top: 15px;
+  border-radius: 5px;
+  margin-top: 10px;
 }
+
 .git-link {
   margin: 15px;
   text-align: center;
+  font-size: 14px;
 }
