--- a/style.css
+++ b/style.css
@@ -80,15 +80,18 @@ main {
 .temp {
   font-size: 34px;
   line-height: 1.2;
+  margin-right: 3px;
 }
 h2 {
   display: flex;
   justify-content: center;
+  font-size: 19px;
 }
 h2 a {
   align-self: flex-start;
   font-size: 22px;
   color: #07f;
+  letter-spacing: 3px;
 }
 .active {
   color: #222;
